added links and content to the body of index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-git <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>My Webpage</title>
     </head>
     <body>
-        Hello, world!
-        Hello again
+        <h1>Hello World!</h1>
+        <h3>My name is Jonathan Kent and this is me!</h3>
+        <a href="path/to/aboutme.html">About me!</a>
+        <a href="path/to/whatido.html">This is what I do!</a>
+        <a href="path/to/hello.html">Click here!</a>
+        <a href="path/to/hello.html">Click here!</a>
     </body>
 </html>
