--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <body>
         <h1>Hello World!</h1>
         <h3>My name is Jonathan Kent and this is me!</h3>
-        <a href="path/to/aboutme.html">About me!</a>
-        <a href="path/to/whatido.html">This is what I do!</a>
-        <a href="path/to/hello.html">Click here!</a>
-        <a href="path/to/hello.html">Click here!</a>
+        <img src="thisisme.jpg" height="50%" width="50%" />
+
+        <a href="aboutme.html">About me!</a>
+        <a href="whatido.html">This is what I do!</a>
+        <a href="hello.html">Click here!</a>
+        <a href="hello.html">Click here!</a>
     </body>
 </html>
