added links and list to aboutme.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,9 +13,9 @@
       <li>I go to Western University</li>
       <li>I study psychology</li>
     </ul>
-    <a href="path/to/index.html">Home page!</a>
-    <a href="path/to/whatido.html">This is what I do!</a>
-    <a href="path/to/hello.html">Click here!</a>
-    <a href="path/to/hello.html">Click here!</a>
+    <a href="index.html">Home page!</a>
+    <a href="whatido.html">This is what I do!</a>
+    <a href="mypassions.html">This is what I am passionate about!</a>
+    <a href="thankyou.html">Final page!</a>
   </body>
 </html>
