added table and links to whatido.html

--- a/whatido.html
+++ b/whatido.html
@@ -8,6 +8,34 @@
   </head>
   <h1>This is what I do</h1>
   <body>
-
+<table border="1">
+<th>What I have done:</th>
+  <tr>
+    <td>
+      School
+    </td>
+    <td>
+      Western University
+    </td>
+    <td>
+      Graduated from Mentor College
+    </td>
+  </tr>
+<tr>
+  <td>
+    Sports
+  </td>
+  <td>
+    Hockey
+  </td>
+  <td>
+    Karate
+  </td>
+</tr>
+</table>
+<a href="index.html">Home page!</a>
+<a href="aboutme.html">About me!</a>
+<a href="mypassions.html">This is what I am passionate about!</a>
+<a href="thankyou.html">Final page!</a>
   </body>
 </html>
