--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <a href="aboutme.html">About me!</a>
         <a href="whatido.html">This is what I do!</a>
-        <a href="hello.html">Click here!</a>
-        <a href="hello.html">Click here!</a>
+        <a href="mypassions.html">This is what I am passionate about!</a>
+        <a href="thankyou.html">Final page!</a>
     </body>
 </html>
