added header to index.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <title>My Webpage</title>
     </head>
     <body>
+      <link rel="stylesheet" href="stylesheet.css">
         <h1>Hello World!</h1>
         <h3>My name is Jonathan Kent and this is me!</h3>
         <img src="thisisme.jpg" height="50%" width="50%" />
-
+    <h5>
         <a href="aboutme.html">About me!</a>
         <a href="whatido.html">This is what I do!</a>
         <a href="mypassions.html">This is what I am passionate about!</a>
         <a href="thankyou.html">Final page!</a>
+      </h5>
     </body>
 </html>
