added headers to thankyou.html

--- a/thankyou.html
+++ b/thankyou.html
@@ -5,9 +5,13 @@
     <title></title>
   </head>
   <body>
+    <link rel="stylesheet" href="stylesheet.css">
+    <h1>Thank you for visiting my Webpage</h1>
+    <h5>
     <a href="index.html">Home page!</a>
     <a href="aboutme.html">About me!</a>
     <a href="whatido.html">This is what I do!</a>
     <a href="mypassions.html">This is what I am passionate about!</a>
+    </h5>
   </body>
 </html>
