--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
         <title>My Webpage</title>
     </head>
     <body>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
       <link rel="stylesheet" href="stylesheet.css">
+      <link rel="stylesheet" href="tablestyle.css">
         <h1>Hello World!</h1>
-        <h3>My name is Jonathan Kent and this is me!</h3>
-        <img src="thisisme.jpg" height="50%" width="50%" />
+        <h3>My name is Jonathan Kent, and this is me!</h3>
+        <img src="thisisme.jpg" height="50%" width="50%" border=3px />
     <h5>
-        <a href="aboutme.html">About me!</a>
-        <a href="whatido.html">This is what I do!</a>
-        <a href="mypassions.html">This is what I am passionate about!</a>
-        <a href="thankyou.html">Final page!</a>
+      <table border="2">
+        <div class="container">
+          <div class="row">
+    <div class="col">
+      <td> <a href="thankyou.html">Final page!</a> </td>
+    </div>
+    <div class="col">
+      <td> <a href="aboutme.html">About me!</a> </td>
+    </div>
+    <div class="col">
+      <td> <a href="whatido.html">This is what I do!</a> </td>
+    </div>
+  </div>
+</div>
+      </table>
       </h5>
     </body>
 </html>
