--- a/aboutme.html
+++ b/aboutme.html
@@ -8,14 +8,30 @@
   </head>
   <h1>About Me</h1>
   <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="tablestyle.css">
     <ul>
       <li>I play hockey</li>
       <li>I go to Western University</li>
       <li>I study psychology</li>
     </ul>
-    <a href="index.html">Home page!</a>
-    <a href="whatido.html">This is what I do!</a>
-    <a href="mypassions.html">This is what I am passionate about!</a>
-    <a href="thankyou.html">Final page!</a>
+    <h5>
+      <table border="2">
+        <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <td> <a href="thankyou.html">Final page!</a> </td>
+    </div>
+    <div class="col-sm">
+      <td> <a href="index.html">Home page!</a> </td>
+    </div>
+    <div class="col-sm">
+      <td> <a href="whatido.html">This is what I do!</a> </td>
+    </div>
+  </div>
+</div>
+      </table>
+      </h5>
   </body>
 </html>
