--- a/mypassions.html
+++ b/mypassions.html
@@ -5,9 +5,19 @@
     <title></title>
   </head>
   <body>
-    <a href="aboutme.html">About me!</a>
-    <a href="whatido.html">This is what I do!</a>
-    <a href="index.html">Home page!</a>
-    <a href="thankyou.html">Final page!</a>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <div class="container">
+    <div class="row">
+      <div class="col">
+        1 of 3
+      </div>
+      <div class="col">
+        2 of 3
+      </div>
+      <div class="col">
+        3 of 3
+      </div>
+    </div>
+  </div>
   </body>
 </html>
