--- a/thankyou.html
+++ b/thankyou.html
@@ -5,13 +5,26 @@
     <title></title>
   </head>
   <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
-    <h1>Thank you for visiting my Webpage</h1>
+    <link rel="stylesheet" href="tablestyle.css">
+    <h1>Thank you for visiting my Webpage!</h1>
     <h5>
-    <a href="index.html">Home page!</a>
-    <a href="aboutme.html">About me!</a>
-    <a href="whatido.html">This is what I do!</a>
-    <a href="mypassions.html">This is what I am passionate about!</a>
-    </h5>
+      <table border="2">
+        <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <td> <a href="index.html">Home Page!</a> </td>
+    </div>
+    <div class="col-sm">
+      <td> <a href="aboutme.html">About me!</a> </td>
+    </div>
+    <div class="col-sm">
+      <td> <a href="whatido.html">This is what I do!</a> </td>
+    </div>
+  </div>
+</div>
+      </table>
+      </h5>
   </body>
 </html>
