--- a/whatido.html
+++ b/whatido.html
@@ -8,11 +8,15 @@
   </head>
   <h1>This is what I do</h1>
   <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="tablestyle.css">
 <table border="1">
+  <link rel="stylesheet" href="tablestyle.css">
 <th>What I have done:</th>
   <tr>
     <td>
-      School
+      School:
     </td>
     <td>
       Western University
@@ -23,7 +27,7 @@
   </tr>
 <tr>
   <td>
-    Sports
+    Sports:
   </td>
   <td>
     Hockey
@@ -33,9 +37,22 @@
   </td>
 </tr>
 </table>
-<a href="index.html">Home page!</a>
-<a href="aboutme.html">About me!</a>
-<a href="mypassions.html">This is what I am passionate about!</a>
-<a href="thankyou.html">Final page!</a>
+<h5>
+  <table border="2">
+    <div class="container">
+<div class="row">
+<div class="col-sm">
+  <td> <a href="thankyou.html">Final page!</a> </td>
+</div>
+<div class="col-sm">
+  <td> <a href="aboutme.html">About me!</a> </td>
+</div>
+<div class="col-sm">
+  <td> <a href="index.html">Home Page!</a> </td>
+</div>
+</div>
+</div>
+  </table>
+  </h5>
   </body>
 </html>
