--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="tablestyle.css">
         <h1>Hello World!</h1>
         <h3>My name is Jonathan Kent, and this is me!</h3>
-        <img src="thisisme.jpg" height="50%" width="50%" border=3px />
+        <img src="thisisme.jpg" height="50%" width="50%" border= black 3px />
     <h5>
       <table border="2">
         <div class="container">
