added @media to stylesheet.css

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <table border="2">
         <div class="container">
           <div class="row">
-    <div class="col">
+    <div class="col-3">
       <td> <a href="thankyou.html">Final page!</a> </td>
     </div>
-    <div class="col">
+    <div class="col-3">
       <td> <a href="aboutme.html">About me!</a> </td>
     </div>
     <div class="col">
