--- a/aboutme.html
+++ b/aboutme.html
@@ -6,28 +6,31 @@
       About Me
     </title>
   </head>
-  <h1>About Me</h1>
+  <h1 id="title">About Me</h1>
   <body>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="tablestyle.css">
+    <link rel="stylesheet" href="style.scss">
+<div>
     <ul>
       <li>I play hockey</li>
       <li>I go to Western University</li>
       <li>I study psychology</li>
     </ul>
-    <h5>
+</div>
+    <h5 class="links">
       <table border="2">
         <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-3">
       <td> <a href="thankyou.html">Final page!</a> </td>
     </div>
-    <div class="col-sm">
+    <div class="col-3">
       <td> <a href="index.html">Home page!</a> </td>
     </div>
-    <div class="col-sm">
-      <td> <a href="whatido.html">This is what I do!</a> </td>
+    <div class="col-3">
+      <td> <a href="whatido.html">Things I do!</a> </td>
     </div>
   </div>
 </div>
