--- a/mypassions.html
+++ b/mypassions.html
@@ -2,19 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <style>
+          .row > div {
+            padding: 20px;
+            border: 2px black;
+          }
+    </style>
+
     <title></title>
   </head>
   <body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-4">
         1 of 3
       </div>
-      <div class="col">
+      <div class="col-4">
         2 of 3
       </div>
-      <div class="col">
+      <div class="col-4">
         3 of 3
       </div>
     </div>
