--- a/thankyou.html
+++ b/thankyou.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="tablestyle.css">
-    <h1>Thank you for visiting my Webpage!</h1>
-    <h5>
+    <h1 id="title">Thank you for visiting my Webpage!</h1>
+    <h5 class="links">
       <table border="2">
         <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-3">
       <td> <a href="index.html">Home Page!</a> </td>
     </div>
-    <div class="col-sm">
+    <div class="col-3">
       <td> <a href="aboutme.html">About me!</a> </td>
     </div>
-    <div class="col-sm">
-      <td> <a href="whatido.html">This is what I do!</a> </td>
+    <div class="col-3">
+      <td> <a href="whatido.html">Things I do!</a> </td>
     </div>
   </div>
 </div>
