--- a/whatido.html
+++ b/whatido.html
@@ -6,12 +6,12 @@
       What I do
   </title>
   </head>
-  <h1>This is what I do</h1>
+  <h1 id="title">This is what I do</h1>
   <body>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="tablestyle.css">
-<table border="1">
+<table border="2">
   <link rel="stylesheet" href="tablestyle.css">
 <th>What I have done:</th>
   <tr>
@@ -37,17 +37,17 @@
   </td>
 </tr>
 </table>
-<h5>
+<h5 class="links">
   <table border="2">
     <div class="container">
 <div class="row">
-<div class="col-sm">
+<div class="col-3">
   <td> <a href="thankyou.html">Final page!</a> </td>
 </div>
-<div class="col-sm">
+<div class="col-3">
   <td> <a href="aboutme.html">About me!</a> </td>
 </div>
-<div class="col-sm">
+<div class="col-3">
   <td> <a href="index.html">Home Page!</a> </td>
 </div>
 </div>
