--- a/whatido.html
+++ b/whatido.html
@@ -5,54 +5,61 @@
     <title>
       What I do
   </title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="stylesheet.css">
+  <<link rel="stylesheet" href="tablestyle.css">
+  <style>
+      .row > div {
+          padding: 20px;
+          border: 2px solid black;
+      }
+  </style>
   </head>
   <h1 id="title">This is what I do</h1>
   <body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="tablestyle.css">
-<table border="2">
-  <link rel="stylesheet" href="tablestyle.css">
-<th>What I have done:</th>
-  <tr>
-    <td>
-      School:
-    </td>
-    <td>
-      Western University
-    </td>
-    <td>
-      Graduated from Mentor College
-    </td>
-  </tr>
-<tr>
-  <td>
-    Sports:
-  </td>
-  <td>
-    Hockey
-  </td>
-  <td>
-    Karate
-  </td>
-</tr>
-</table>
+    <table border="2">
+      <th>What I have done:</th>
+        <tr>
+          <td>
+            School:
+          </td>
+          <td>
+            Western University
+          </td>
+          <td>
+            Graduated from Mentor College
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Sports:
+          </td>
+          <td>
+            Hockey
+          </td>
+          <td>
+            Karate
+          </td>
+        </tr>
+      </table>
 <h5 class="links">
-  <table border="2">
-    <div class="container">
-<div class="row">
-<div class="col-3">
-  <td> <a href="thankyou.html">Final page!</a> </td>
-</div>
-<div class="col-3">
-  <td> <a href="aboutme.html">About me!</a> </td>
-</div>
-<div class="col-3">
-  <td> <a href="index.html">Home Page!</a> </td>
-</div>
-</div>
-</div>
-  </table>
-  </h5>
+  <div class="container">
+      <div class="row">
+        <div class="col-12">
+          Links for the website:
+        </div>
+          <div class="col-4">
+              <a href="aboutme.html">About me!</a>
+          </div>
+          <div class="col-4">
+            <a href="index.html">Home Page!</a>
+          </div>
+          <div class="col-4">
+            <a href="thankyou.html">Final page!</a>
+          </div>
+      </div>
+  </div>
+</h5>
   </body>
 </html>
