--- a/aboutme.html
+++ b/aboutme.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>
       About Me
     </title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+      <link rel="stylesheet" href="stylesheet.css">
+      <style>
+          .row > div {
+              padding: 20px;
+              border: 2px solid black;
+          }
+      </style>
   </head>
   <h1 id="title">About Me</h1>
   <body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="tablestyle.css">
     <link rel="stylesheet" href="style.scss">
 <div>
     <ul>
@@ -19,22 +24,23 @@
       <li>I study psychology</li>
     </ul>
 </div>
-    <h5 class="links">
-      <table border="2">
-        <div class="container">
-  <div class="row">
-    <div class="col-3">
-      <td> <a href="thankyou.html">Final page!</a> </td>
-    </div>
-    <div class="col-3">
-      <td> <a href="index.html">Home page!</a> </td>
-    </div>
-    <div class="col-3">
-      <td> <a href="whatido.html">Things I do!</a> </td>
-    </div>
+<h5 class="links">
+  <div class="container">
+      <div class="row">
+        <div class="col-12">
+          Links for the website:
+        </div>
+          <div class="col-4">
+              <a href="index.html">Home Page!</a>
+          </div>
+          <div class="col-4">
+            <a href="whatido.html">Things I do!</a>
+          </div>
+          <div class="col-4">
+            <a href="thankyou.html">Final page!</a>
+          </div>
+      </div>
   </div>
-</div>
-      </table>
-      </h5>
+</h5>
   </body>
 </html>
