--- a/index.html
+++ b/index.html
@@ -2,30 +2,37 @@
 <html>
     <head>
         <title>My Webpage</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link rel="stylesheet" href="stylesheet.css">
+        <style>
+            .row > div {
+                padding: 20px;
+                border: 2px solid black;
+            }
+        </style>
     </head>
     <body>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-      <link rel="stylesheet" href="stylesheet.css">
-      <link rel="stylesheet" href="tablestyle.css">
-        <h1 id= "title" >Hello World!</h1>
-        <h3>My name is Jonathan Kent, and this is me!</h3>
-        <img src="thisisme.jpg" height="50%" width="50%" border= black 3px />
-    <h5 class="links">
-      <table border="2">
+      <h1 id= "title" >Hello World!</h1>
+      <h3>My name is Jonathan Kent, and this is me!</h3>
+      <img src="thisisme.jpg" height="50%" width="50%" border= black 3px />
+      <h5 class="links">
         <div class="container">
-          <div class="row">
-    <div class="col-lg-4 col-sm-3">
-      <td> <a href="thankyou.html">Final page!</a> </td>
-    </div>
-    <div class="col-lg-4 col-sm-3">
-      <td> <a href="aboutme.html">About me!</a> </td>
-    </div>
-    <div class="col-lg-4 col-sm-3">
-      <td> <a href="whatido.html">Things I do!</a> </td>
-    </div>
-  </div>
-</div>
-      </table>
+            <div class="row">
+                <div class="col-12">
+                  Links for the website:
+                </div>
+                <div class="col-4">
+                    <a href="aboutme.html">About me!</a>
+                </div>
+                <div class="col-4">
+                  <a href="whatido.html">Things I do!</a>
+                </div>
+                <div class="col-4">
+                  <a href="thankyou.html">Final page!</a>
+                </div>
+            </div>
+        </div>
       </h5>
     </body>
 </html>
