--- a/mypassions.html
+++ b/mypassions.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <style>
-          .row > div {
-            padding: 20px;
-            border: 2px black;
-          }
-    </style>
-
-    <title></title>
-  </head>
-  <body>
-    <div class="container">
-    <div class="row">
-      <div class="col-4">
-        1 of 3
-      </div>
-      <div class="col-4">
-        2 of 3
-      </div>
-      <div class="col-4">
-        3 of 3
-      </div>
-    </div>
-  </div>
-  </body>
+<html>
+    <head>
+        <title>My Web Page!</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <style>
+            .row > div {
+                padding: 20px;
+                background-color: teal;
+                border: 2px solid black;
+            }
+        </style>
+    </head>
+    <body>
+      <h5 class="links">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <a href="aboutme.html">About me!</a>
+                </div>
+                <div class="col-6">
+                  <a href="whatido.html">Things I do!</a>
+                </div>
+                <div class="col-3">
+                  <a href="thankyou.html">Final page!</a>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
