--- a/thankyou.html
+++ b/thankyou.html
@@ -2,29 +2,36 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+    <title>Final Page!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="tablestyle.css">
+    <style>
+        .row > div {
+            padding: 20px;
+            border: 2px solid black;
+        }
+    </style>
+  </head>
+  <body>
     <h1 id="title">Thank you for visiting my Webpage!</h1>
     <h5 class="links">
-      <table border="2">
-        <div class="container">
-  <div class="row">
-    <div class="col-3">
-      <td> <a href="index.html">Home Page!</a> </td>
-    </div>
-    <div class="col-3">
-      <td> <a href="aboutme.html">About me!</a> </td>
-    </div>
-    <div class="col-3">
-      <td> <a href="whatido.html">Things I do!</a> </td>
-    </div>
-  </div>
-</div>
-      </table>
-      </h5>
+      <div class="container">
+          <div class="row">
+            <div class="col-12">
+              Links for the website:
+            </div>
+              <div class="col-4">
+                  <a href="aboutme.html">About me!</a>
+              </div>
+              <div class="col-4">
+                <a href="index.html">Home Page!</a>
+              </div>
+              <div class="col-4">
+                <a href="whatido.html">Things I do!</a>
+              </div>
+          </div>
+      </div>
+    </h5>
   </body>
 </html>
